prestage-vs-503.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prestage-virtualservice-503
  namespace: zakir
spec:
  hosts:
  - "*"
  gateways:
  - prestage-gateway
  http:
  - fault:
      abort:
        httpStatus: 503
        percentage:
          value: 100
    match:
    - uri:
        prefix: /utils
    route:
    - destination:
        host: prestage
        port:
          number: 8081
