prestage-vs-all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prestage-virtualservice
  namespace: zakir
spec:
  hosts:
  - "*"
  gateways:
  - prestage-gateway
  http:
  - fault:
      abort:
        httpStatus: 503
        percentage:
          value: 1
      delay:
        percent: 1
        fixedDelay: 10s
    match:
    - uri:
        prefix: /utils
    route:
    - destination:
        host: prestage
        port:
          number: 8081
    timeout: 10s
