prestage-vs-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prestage-virtualservice-delay
  namespace: zakir
spec:
  hosts:
  - "*"
  gateways:
  - prestage-gateway
  http:
  - match:
    - uri:
        prefix: /utils
    fault:
      delay:
        percent: 100
        fixedDelay: 10s
    route:
    - destination:
        host: prestage
        port:
          number: 8081
