prestage-vs-retries.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prestage-virtualservice-retries
  namespace: zakir
spec:
  hosts:
  - "*"
  gateways:
  - prestage-gateway
  http:
  - match:
    - uri:
        prefix: /utils
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: "connect-failure"
    route:
    - destination:
        host: prestage
        port:
          number: 8081
