prestage-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prestage-virtualservice
  namespace: zakir
spec:
  hosts:
  - "*"
  gateways:
  - prestage-gateway
  http:
  - match:
    - uri:
        prefix: /utils
    route:
    - destination:
        host: prestage
        port:
          number: 8081
    timeout: 5s
